[package]
name = "sasa"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpal"]
cpal = ["dep:cpal"]
oboe = ["dep:oboe"]

[dependencies]
anyhow = "1.0.68"
cpal = { version = "0.14.2", optional = true }
ringbuf = "0.3.2"
symphonia = { version = "0.5.2", features = ["mp3", "aac"] }
thiserror = "1.0.38"

oboe = { version = "0.5.0", optional = true, features = ["shared-stdcxx"] }

[dev-dependencies]
kira = "0.7.1"
