[package]
name = "sasa"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpal"]
cpal = ["dep:cpal"]
oboe = ["dep:oboe"]

[dependencies]
anyhow = "1.0.100"
cpal = { version = "0.17.1", optional = true }
ringbuf = "0.3.3"
symphonia = { version = "0.5.5", features = ["mp3", "aac"] }
thiserror = "2.0.18"

oboe = { version = "0.6.1", optional = true, features = ["shared-stdcxx"] }
